--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "socket.io": "^4.6.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
